data/derived/comb/progs/unify/prog8803.ml.out
Characters 105-106:
  if k = f then s else assoc d k t;;
                             ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type
         ('a -> 'b -> 'c) * 'd * ('d * ('a -> 'b -> 'c)) list
